outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_15-16-28/evaluations/problem_eval178762158751668158_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the difference between the direct distance to the destination and the distance through the candidate node. The heuristic dynamically adjusts weights based on the number of unvisited nodes, favoring closer nodes when few remain and prioritizing savings when more nodes are left.}
                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the difference between the direct distance to the destination and the distance through the candidate node. The heuristic dynamically adjusts weights based on the number of unvisited nodes, favoring closer nodes when few remain and prioritizing savings when more nodes are left.}
                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
